antlrts/eelParser.ts
// Generated from eel.g4 by ANTLR 4.12.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import eelListener from "./eelListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class eelParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly ID = 16;
	public static readonly FUNCNAME = 17;
	public static readonly BOOLEANOP = 18;
	public static readonly INUM = 19;
	public static readonly STRING = 20;
	public static readonly WS = 21;
	public static readonly FuncCall = 22;
	public static readonly ActualParams = 23;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_prog = 0;
	public static readonly RULE_procs = 1;
	public static readonly RULE_proc = 2;
	public static readonly RULE_formalParams = 3;
	public static readonly RULE_lines = 4;
	public static readonly RULE_dcl = 5;
	public static readonly RULE_stmt = 6;
	public static readonly RULE_expr = 7;
	public static readonly RULE_operator = 8;
	public static readonly RULE_binaryOperator = 9;
	public static readonly RULE_boolOperator = 10;
	public static readonly RULE_ctrlStrc = 11;
	public static readonly RULE_selCtrlStrc = 12;
	public static readonly RULE_ifStrc = 13;
	public static readonly RULE_elseStrc = 14;
	public static readonly RULE_iterCtrlStrc = 15;
	public static readonly RULE_repeatStrc = 16;
	public static readonly RULE_booleanExpr = 17;
	public static readonly RULE_value = 18;
	public static readonly RULE_funcCall = 19;
	public static readonly RULE_actualParams = 20;
	public static readonly literalNames: (string | null)[] = [ null, "'procedure'", 
                                                            "'('", "')'", 
                                                            "'endProcedure'", 
                                                            "','", "'let'", 
                                                            "'+'", "'-'", 
                                                            "'='", "'if'", 
                                                            "'then'", "'endIf'", 
                                                            "'else then'", 
                                                            "'repeat while'", 
                                                            "'endRepeat'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "ID", "FUNCNAME", 
                                                             "BOOLEANOP", 
                                                             "INUM", "STRING", 
                                                             "WS", "FuncCall", 
                                                             "ActualParams" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"prog", "procs", "proc", "formalParams", "lines", "dcl", "stmt", "expr", 
		"operator", "binaryOperator", "boolOperator", "ctrlStrc", "selCtrlStrc", 
		"ifStrc", "elseStrc", "iterCtrlStrc", "repeatStrc", "booleanExpr", "value", 
		"funcCall", "actualParams",
	];
	public get grammarFileName(): string { return "eel.g4"; }
	public get literalNames(): (string | null)[] { return eelParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return eelParser.symbolicNames; }
	public get ruleNames(): string[] { return eelParser.ruleNames; }
	public get serializedATN(): number[] { return eelParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, eelParser._ATN, eelParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public prog(): ProgContext {
		let localctx: ProgContext = new ProgContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, eelParser.RULE_prog);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 42;
			this.procs();
			this.state = 43;
			this.match(eelParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public procs(): ProcsContext {
		let localctx: ProcsContext = new ProcsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, eelParser.RULE_procs);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 46;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 45;
				this.proc();
				}
				}
				this.state = 48;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public proc(): ProcContext {
		let localctx: ProcContext = new ProcContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, eelParser.RULE_proc);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 50;
			this.match(eelParser.T__0);
			this.state = 51;
			this.match(eelParser.ID);
			this.state = 52;
			this.match(eelParser.T__1);
			this.state = 54;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===16) {
				{
				this.state = 53;
				this.formalParams();
				}
			}

			this.state = 56;
			this.match(eelParser.T__2);
			this.state = 57;
			this.lines();
			this.state = 58;
			this.match(eelParser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public formalParams(): FormalParamsContext {
		let localctx: FormalParamsContext = new FormalParamsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, eelParser.RULE_formalParams);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 60;
			this.match(eelParser.ID);
			this.state = 65;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===5) {
				{
				{
				this.state = 61;
				this.match(eelParser.T__4);
				this.state = 62;
				this.match(eelParser.ID);
				}
				}
				this.state = 67;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public lines(): LinesContext {
		let localctx: LinesContext = new LinesContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, eelParser.RULE_lines);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 71;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===6) {
				{
				{
				this.state = 68;
				this.dcl();
				}
				}
				this.state = 73;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 77;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 5832704) !== 0)) {
				{
				{
				this.state = 74;
				this.stmt();
				}
				}
				this.state = 79;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 83;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===10 || _la===14) {
				{
				{
				this.state = 80;
				this.ctrlStrc();
				}
				}
				this.state = 85;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public dcl(): DclContext {
		let localctx: DclContext = new DclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, eelParser.RULE_dcl);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 86;
			this.match(eelParser.T__5);
			this.state = 87;
			this.match(eelParser.ID);
			this.state = 91;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 263040) !== 0)) {
				{
				{
				this.state = 88;
				this.expr();
				}
				}
				this.state = 93;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stmt(): StmtContext {
		let localctx: StmtContext = new StmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, eelParser.RULE_stmt);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 94;
			this.value();
			this.state = 98;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 95;
					this.expr();
					}
					}
				}
				this.state = 100;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let localctx: ExprContext = new ExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, eelParser.RULE_expr);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 101;
			this.operator();
			this.state = 102;
			this.value();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public operator(): OperatorContext {
		let localctx: OperatorContext = new OperatorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, eelParser.RULE_operator);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 106;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 7:
			case 8:
			case 9:
				{
				this.state = 104;
				this.binaryOperator();
				}
				break;
			case 18:
				{
				this.state = 105;
				this.boolOperator();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public binaryOperator(): BinaryOperatorContext {
		let localctx: BinaryOperatorContext = new BinaryOperatorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, eelParser.RULE_binaryOperator);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 108;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 896) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public boolOperator(): BoolOperatorContext {
		let localctx: BoolOperatorContext = new BoolOperatorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, eelParser.RULE_boolOperator);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 110;
			this.match(eelParser.BOOLEANOP);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public ctrlStrc(): CtrlStrcContext {
		let localctx: CtrlStrcContext = new CtrlStrcContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, eelParser.RULE_ctrlStrc);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 114;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 14:
				{
				this.state = 112;
				this.iterCtrlStrc();
				}
				break;
			case 10:
				{
				this.state = 113;
				this.selCtrlStrc();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public selCtrlStrc(): SelCtrlStrcContext {
		let localctx: SelCtrlStrcContext = new SelCtrlStrcContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, eelParser.RULE_selCtrlStrc);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 116;
			this.ifStrc();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public ifStrc(): IfStrcContext {
		let localctx: IfStrcContext = new IfStrcContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, eelParser.RULE_ifStrc);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 118;
			this.match(eelParser.T__9);
			this.state = 119;
			this.match(eelParser.T__1);
			this.state = 120;
			this.booleanExpr();
			this.state = 121;
			this.match(eelParser.T__2);
			this.state = 122;
			this.match(eelParser.T__10);
			this.state = 123;
			this.lines();
			this.state = 127;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===13) {
				{
				{
				this.state = 124;
				this.elseStrc();
				}
				}
				this.state = 129;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 130;
			this.match(eelParser.T__11);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public elseStrc(): ElseStrcContext {
		let localctx: ElseStrcContext = new ElseStrcContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, eelParser.RULE_elseStrc);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 132;
			this.match(eelParser.T__12);
			this.state = 133;
			this.lines();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public iterCtrlStrc(): IterCtrlStrcContext {
		let localctx: IterCtrlStrcContext = new IterCtrlStrcContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, eelParser.RULE_iterCtrlStrc);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 135;
			this.repeatStrc();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public repeatStrc(): RepeatStrcContext {
		let localctx: RepeatStrcContext = new RepeatStrcContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, eelParser.RULE_repeatStrc);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 137;
			this.match(eelParser.T__13);
			this.state = 138;
			this.match(eelParser.T__1);
			this.state = 139;
			this.booleanExpr();
			this.state = 140;
			this.match(eelParser.T__2);
			this.state = 141;
			this.lines();
			this.state = 142;
			this.match(eelParser.T__14);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public booleanExpr(): BooleanExprContext {
		let localctx: BooleanExprContext = new BooleanExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, eelParser.RULE_booleanExpr);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 144;
			this.stmt();
			this.state = 145;
			this.boolOperator();
			this.state = 146;
			this.stmt();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public value(): ValueContext {
		let localctx: ValueContext = new ValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, eelParser.RULE_value);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 148;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 5832704) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public funcCall(): FuncCallContext {
		let localctx: FuncCallContext = new FuncCallContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, eelParser.RULE_funcCall);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 150;
			this.match(eelParser.FUNCNAME);
			this.state = 151;
			this.match(eelParser.T__1);
			this.state = 153;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===23) {
				{
				this.state = 152;
				this.match(eelParser.ActualParams);
				}
			}

			this.state = 155;
			this.match(eelParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public actualParams(): ActualParamsContext {
		let localctx: ActualParamsContext = new ActualParamsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, eelParser.RULE_actualParams);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 157;
			this.match(eelParser.ID);
			this.state = 162;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===5) {
				{
				{
				this.state = 158;
				this.match(eelParser.T__4);
				this.state = 159;
				this.match(eelParser.ID);
				}
				}
				this.state = 164;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!eelParser.__ATN) {
			eelParser.__ATN = new ATNDeserializer().deserialize(eelParser._serializedATN);
		}

		return eelParser.__ATN;
	}


	static DecisionsToDFA = eelParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class ProgContext extends ParserRuleContext {
	constructor(parser?: eelParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public procs(): ProcsContext {
		return this.getTypedRuleContext(ProcsContext, 0) as ProcsContext;
	}
	public EOF(): TerminalNode {
		return this.getToken(eelParser.EOF, 0);
	}
    public get ruleIndex(): number {
    	return eelParser.RULE_prog;
	}
	public enterRule(listener: eelListener): void {
	    if(listener.enterProg) {
	 		listener.enterProg(this);
		}
	}
	public exitRule(listener: eelListener): void {
	    if(listener.exitProg) {
	 		listener.exitProg(this);
		}
	}
}


export class ProcsContext extends ParserRuleContext {
	constructor(parser?: eelParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public proc_list(): ProcContext[] {
		return this.getTypedRuleContexts(ProcContext) as ProcContext[];
	}
	public proc(i: number): ProcContext {
		return this.getTypedRuleContext(ProcContext, i) as ProcContext;
	}
    public get ruleIndex(): number {
    	return eelParser.RULE_procs;
	}
	public enterRule(listener: eelListener): void {
	    if(listener.enterProcs) {
	 		listener.enterProcs(this);
		}
	}
	public exitRule(listener: eelListener): void {
	    if(listener.exitProcs) {
	 		listener.exitProcs(this);
		}
	}
}


export class ProcContext extends ParserRuleContext {
	constructor(parser?: eelParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public ID(): TerminalNode {
		return this.getToken(eelParser.ID, 0);
	}
	public lines(): LinesContext {
		return this.getTypedRuleContext(LinesContext, 0) as LinesContext;
	}
	public formalParams(): FormalParamsContext {
		return this.getTypedRuleContext(FormalParamsContext, 0) as FormalParamsContext;
	}
    public get ruleIndex(): number {
    	return eelParser.RULE_proc;
	}
	public enterRule(listener: eelListener): void {
	    if(listener.enterProc) {
	 		listener.enterProc(this);
		}
	}
	public exitRule(listener: eelListener): void {
	    if(listener.exitProc) {
	 		listener.exitProc(this);
		}
	}
}


export class FormalParamsContext extends ParserRuleContext {
	constructor(parser?: eelParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public ID_list(): TerminalNode[] {
	    	return this.getTokens(eelParser.ID);
	}
	public ID(i: number): TerminalNode {
		return this.getToken(eelParser.ID, i);
	}
    public get ruleIndex(): number {
    	return eelParser.RULE_formalParams;
	}
	public enterRule(listener: eelListener): void {
	    if(listener.enterFormalParams) {
	 		listener.enterFormalParams(this);
		}
	}
	public exitRule(listener: eelListener): void {
	    if(listener.exitFormalParams) {
	 		listener.exitFormalParams(this);
		}
	}
}


export class LinesContext extends ParserRuleContext {
	constructor(parser?: eelParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public dcl_list(): DclContext[] {
		return this.getTypedRuleContexts(DclContext) as DclContext[];
	}
	public dcl(i: number): DclContext {
		return this.getTypedRuleContext(DclContext, i) as DclContext;
	}
	public stmt_list(): StmtContext[] {
		return this.getTypedRuleContexts(StmtContext) as StmtContext[];
	}
	public stmt(i: number): StmtContext {
		return this.getTypedRuleContext(StmtContext, i) as StmtContext;
	}
	public ctrlStrc_list(): CtrlStrcContext[] {
		return this.getTypedRuleContexts(CtrlStrcContext) as CtrlStrcContext[];
	}
	public ctrlStrc(i: number): CtrlStrcContext {
		return this.getTypedRuleContext(CtrlStrcContext, i) as CtrlStrcContext;
	}
    public get ruleIndex(): number {
    	return eelParser.RULE_lines;
	}
	public enterRule(listener: eelListener): void {
	    if(listener.enterLines) {
	 		listener.enterLines(this);
		}
	}
	public exitRule(listener: eelListener): void {
	    if(listener.exitLines) {
	 		listener.exitLines(this);
		}
	}
}


export class DclContext extends ParserRuleContext {
	constructor(parser?: eelParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public ID(): TerminalNode {
		return this.getToken(eelParser.ID, 0);
	}
	public expr_list(): ExprContext[] {
		return this.getTypedRuleContexts(ExprContext) as ExprContext[];
	}
	public expr(i: number): ExprContext {
		return this.getTypedRuleContext(ExprContext, i) as ExprContext;
	}
    public get ruleIndex(): number {
    	return eelParser.RULE_dcl;
	}
	public enterRule(listener: eelListener): void {
	    if(listener.enterDcl) {
	 		listener.enterDcl(this);
		}
	}
	public exitRule(listener: eelListener): void {
	    if(listener.exitDcl) {
	 		listener.exitDcl(this);
		}
	}
}


export class StmtContext extends ParserRuleContext {
	constructor(parser?: eelParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public value(): ValueContext {
		return this.getTypedRuleContext(ValueContext, 0) as ValueContext;
	}
	public expr_list(): ExprContext[] {
		return this.getTypedRuleContexts(ExprContext) as ExprContext[];
	}
	public expr(i: number): ExprContext {
		return this.getTypedRuleContext(ExprContext, i) as ExprContext;
	}
    public get ruleIndex(): number {
    	return eelParser.RULE_stmt;
	}
	public enterRule(listener: eelListener): void {
	    if(listener.enterStmt) {
	 		listener.enterStmt(this);
		}
	}
	public exitRule(listener: eelListener): void {
	    if(listener.exitStmt) {
	 		listener.exitStmt(this);
		}
	}
}


export class ExprContext extends ParserRuleContext {
	constructor(parser?: eelParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public operator(): OperatorContext {
		return this.getTypedRuleContext(OperatorContext, 0) as OperatorContext;
	}
	public value(): ValueContext {
		return this.getTypedRuleContext(ValueContext, 0) as ValueContext;
	}
    public get ruleIndex(): number {
    	return eelParser.RULE_expr;
	}
	public enterRule(listener: eelListener): void {
	    if(listener.enterExpr) {
	 		listener.enterExpr(this);
		}
	}
	public exitRule(listener: eelListener): void {
	    if(listener.exitExpr) {
	 		listener.exitExpr(this);
		}
	}
}


export class OperatorContext extends ParserRuleContext {
	constructor(parser?: eelParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public binaryOperator(): BinaryOperatorContext {
		return this.getTypedRuleContext(BinaryOperatorContext, 0) as BinaryOperatorContext;
	}
	public boolOperator(): BoolOperatorContext {
		return this.getTypedRuleContext(BoolOperatorContext, 0) as BoolOperatorContext;
	}
    public get ruleIndex(): number {
    	return eelParser.RULE_operator;
	}
	public enterRule(listener: eelListener): void {
	    if(listener.enterOperator) {
	 		listener.enterOperator(this);
		}
	}
	public exitRule(listener: eelListener): void {
	    if(listener.exitOperator) {
	 		listener.exitOperator(this);
		}
	}
}


export class BinaryOperatorContext extends ParserRuleContext {
	constructor(parser?: eelParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
    public get ruleIndex(): number {
    	return eelParser.RULE_binaryOperator;
	}
	public enterRule(listener: eelListener): void {
	    if(listener.enterBinaryOperator) {
	 		listener.enterBinaryOperator(this);
		}
	}
	public exitRule(listener: eelListener): void {
	    if(listener.exitBinaryOperator) {
	 		listener.exitBinaryOperator(this);
		}
	}
}


export class BoolOperatorContext extends ParserRuleContext {
	constructor(parser?: eelParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public BOOLEANOP(): TerminalNode {
		return this.getToken(eelParser.BOOLEANOP, 0);
	}
    public get ruleIndex(): number {
    	return eelParser.RULE_boolOperator;
	}
	public enterRule(listener: eelListener): void {
	    if(listener.enterBoolOperator) {
	 		listener.enterBoolOperator(this);
		}
	}
	public exitRule(listener: eelListener): void {
	    if(listener.exitBoolOperator) {
	 		listener.exitBoolOperator(this);
		}
	}
}

